--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "pca",
-    "version": "0.1.0",
-    "description": "A simple test of OVH Public Cloud Archive Beta using fusejs",
+    "version": "0.2.0",
+    "description": "A simple test of OVH Public Cloud Archive Beta using VMWare fuse4js",
     "homepage": "https://github.com/gierschv/node-ovh-pca",
     "author": "Vincent Giersch <mail@vincent.sh>",
     "contributors": [],
@@ -21,9 +21,11 @@
         "url": "https://github.com/gierschv/node-ovh-pca/issues"
     },
     "dependencies": {
-        "ovh":      "0.3.4",
-        "optimist": "0.3.7",
-        "fuse4js":  "0.1.2",
-        "moment":   "2.0.0"
+        "ovh":               "0.3.6",
+        "optimist":          "0.3.7",
+        "fuse4js-gierschv":  "0.1.3",
+        "moment":            "2.0.0",
+        "pad-component":     "0.0.1",
+        "lazy":              "1.0.11"
     }
 }
