--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "pca",
-    "version": "0.2.0",
+    "version": "0.2.0-1",
     "description": "A simple test of OVH Public Cloud Archive Beta using VMWare fuse4js",
     "homepage": "https://github.com/gierschv/node-ovh-pca",
     "author": "Vincent Giersch <mail@vincent.sh>",
@@ -23,7 +23,7 @@
     "dependencies": {
         "ovh":               "0.3.6",
         "optimist":          "0.3.7",
-        "fuse4js-gierschv":  "0.1.3",
+        "fuse4js":           "0.1.3",
         "moment":            "2.0.0",
         "pad-component":     "0.0.1",
         "lazy":              "1.0.11"
