--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "pca",
-    "version": "0.2.0-1",
+    "version": "0.2.0-2",
     "description": "A simple test of OVH Public Cloud Archive Beta using VMWare fuse4js",
     "homepage": "https://github.com/gierschv/node-ovh-pca",
     "author": "Vincent Giersch <mail@vincent.sh>",
@@ -21,11 +21,12 @@
         "url": "https://github.com/gierschv/node-ovh-pca/issues"
     },
     "dependencies": {
-        "ovh":               "0.3.6",
-        "optimist":          "0.3.7",
+        "ovh":               "0.3.6-2",
+        "optimist":          "0.4.x",
         "fuse4js":           "0.1.3",
         "moment":            "2.0.0",
         "pad-component":     "0.0.1",
-        "lazy":              "1.0.11"
+        "lazy":              "1.0.x",
+        "async":             "0.2.x"
     }
 }
