--- a/package.json
+++ b/package.json
@@ -21,8 +21,8 @@
         "url": "https://github.com/gierschv/node-ovh-pca/issues"
     },
     "dependencies": {
-        "ovh":               "0.3.6-2",
-        "optimist":          "0.4.x",
+        "ovh":               ">= 0.3.7",
+        "optimist":          "0.5.x",
         "fuse4js":           "0.1.3",
         "moment":            "2.0.0",
         "pad-component":     "0.0.1",
