--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "pca",
-    "version": "0.2.0-4",
+    "version": "0.2.1",
     "description": "A simple test of OVH Public Cloud Archive Beta using VMWare fuse4js",
     "homepage": "https://github.com/gierschv/node-ovh-pca",
     "author": "Vincent Giersch <mail@vincent.sh>",
@@ -21,8 +21,8 @@
         "url": "https://github.com/gierschv/node-ovh-pca/issues"
     },
     "dependencies": {
-        "ovh":               ">= 0.3.7",
-        "optimist":          "0.5.x",
+        "ovh":               ">= 0.3.8",
+        "optimist":          "0.6.x",
         "fuse4js":           "0.1.3",
         "moment":            "2.0.0",
         "pad-component":     "0.0.1",
