--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "pca",
-    "version": "0.2.1",
+    "version": "0.2.1-1",
     "description": "A simple test of OVH Public Cloud Archive Beta using VMWare fuse4js",
     "homepage": "https://github.com/gierschv/node-ovh-pca",
     "author": "Vincent Giersch <mail@vincent.sh>",
@@ -21,7 +21,7 @@
         "url": "https://github.com/gierschv/node-ovh-pca/issues"
     },
     "dependencies": {
-        "ovh":               ">= 0.3.8",
+        "ovh":               "0.3.x",
         "optimist":          "0.6.x",
         "fuse4js":           "0.1.3",
         "moment":            "2.0.0",
