--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
     "name": "pca",
-    "version": "0.2.1-1",
-    "description": "A simple test of OVH Public Cloud Archive Beta using VMWare fuse4js",
+    "version": "0.3.0",
+    "description": "A fuse filesystem to browse and manage your OVH Public Cloud Archive",
     "homepage": "https://github.com/gierschv/node-ovh-pca",
     "author": "Vincent Giersch <mail@vincent.sh>",
     "contributors": [],
     "keywords": [
-        "ovh", "pca", "fuse4js"
+        "ovh", "pca", "fuse", "fuse4js"
     ],
     "main": "./pca.js",
     "bin": {
@@ -21,12 +21,12 @@
         "url": "https://github.com/gierschv/node-ovh-pca/issues"
     },
     "dependencies": {
-        "ovh":               "0.3.x",
+        "ovh":               "1.0.x",
         "optimist":          "0.6.x",
         "fuse4js":           "0.1.3",
-        "moment":            "2.0.0",
-        "pad-component":     "0.0.1",
+        "moment":            "2.3.x",
         "lazy":              "1.0.x",
-        "async":             "0.2.x"
+        "async":             "0.2.x",
+        "cli-table":         "0.2.x"
     }
 }
