--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "pca",
-    "version": "0.3.1",
+    "version": "0.3.1-1",
     "description": "A fuse filesystem to browse and manage your OVH Public Cloud Archive",
     "homepage": "https://github.com/gierschv/node-ovh-pca",
     "author": "Vincent Giersch <mail@vincent.sh>",
@@ -24,7 +24,7 @@
         "ovh":               "1.0.x",
         "optimist":          "0.6.x",
         "fuse4js":           "0.1.3",
-        "moment":            "2.3.x",
+        "moment":            "2.x.x",
         "lazy":              "1.0.x",
         "async":             "0.2.x",
         "cli-table":         "0.2.x"
