--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
         "ovh":               "1.0.x",
         "optimist":          "0.6.x",
         "fuse4js":           "0.1.3",
-        "moment":            "2.x.x",
+        "moment":            "2.11.x",
         "lazy":              "1.0.x",
         "async":             "0.2.x",
         "cli-table":         "0.2.x"
